adicionado as configurações no docker